syntax = "proto3";

option java_package = "common.proto.pokemon";

service PokemonService {
  rpc find(PokemonRequest) returns (PokemonResponse) {}
}

message PokemonRequest {
  optional uint32 id = 1;
  optional string name = 2;
}

message PokemonResponse {
  uint32 id = 1;
  string name = 2;
}